# py-winclipboard

./: .gitignore  README.md  pyproject.toml  ruff_all.toml  ruff_defaults.toml
src/winclipboard/: __init__.py  __main__.py  _clipboard.py  _format.py  _nativemethods.py  _wrapper.py
tests/: test_copy.py  test_inspect.py
