[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "winclipboard"
version = "0.1.0"  # TODO: dynamic
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "CC0-1.0"
keywords = []
authors = [
  { name = "Takumasa Nakamura", email = "n.takumasa@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.optional-dependencies]
rich = ["rich"]

[project.urls]
Documentation = "https://github.com/n-takumasa/py-winclipboard#readme"
Issues = "https://github.com/n-takumasa/py-winclipboard/issues"
Source = "https://github.com/n-takumasa/py-winclipboard"

[tool.hatch.envs.default]
platforms = ["windows"]
extra-dependencies = [
  "rich",
  "pytest",
  "coverage",
  "ruff",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy",
  "rich",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/winclipboard tests}"

[tool.coverage.run]
source_pkgs = ["winclipboard", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
winclipboard = ["src/winclipboard", "*/py-winclipboard/src/winclipboard"]
tests = ["tests", "*/py-winclipboard/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "@overload",
]

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.ruff]
extend = "ruff_defaults.toml"
